<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Corvas Notes</string>
    <string name="search_notes">Search Notes...</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="input_note">Type note Here...</string>
    <string name="miscellaneous">Options</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_subtitle">Add Subtitle</string>
    <string name="add_url">Add URL</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="add">ADD</string>
    <string name="enter_url">Enter URL</string>
    <string name="home">Home</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">open</string>

    <string name="toast_bold">Bold</string>
    <string name="toast_italic">Italic</string>
    <string name="toast_underline">Underline</string>
    <string name="toast_strikethrough">Strikethrough</string>
    <string name="toast_bullet">Bullet</string>
    <string name="toast_quote">Quote</string>
    <string name="toast_format_clear">Format clear</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="love_this_app">Love this App</string>
    <string name="share">Share</string>
    <string name="share_the_app">Share the App</string>
    <string name="version">Version</string>
    <string name="made_with_in_india">Made  In India</string>
    <string name="apps">Apps</string>
    <string name="profile">Profile</string>
    <string name="add_ons">Add Ons</string>
    <string name="made_in_india">Made In india</string>
    <string name="about">About Us</string>
    <string name="app_theme">App Theme</string>
    <string name="dark_or_light_mode">Dark or Light Mode</string>
    <string name="social_links">Social Links, Policy</string>
    <string name="about_">About</string>
    <string name="high_security">High Security</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="cache">Clear Cache</string>
    <string name="clear_cache">Clear All Caches</string>
    <string name="privacy_policy">Privacy Ploicy</string>
    <string name="this_app_privacy_policy">Read Full Privacy Policy</string>
    <string name="this_content_is_deleted">This Content is Deleted</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="type_note_here">Type Note Here</string>

    <string name="stroke">Stroke</string>
    <string name="eraser">Eraser</string>
    <string name="colors">Colors</string>
    <string name="erase_sketch">Erase Sketch</string>
    <string name="stroke_size">Stroke Size</string>
    <string name="saturation">Saturation</string>
    <string name="opacity">Opacity</string>

    <array name="operation_icon">
        <item>"brush"</item>
        <item>"eraser"</item>
        <item>"color_pallet"</item>
        <item>"cancel"</item>
<!--        <item>"text_input"</item>-->
        <item>"undo"</item>
        <item>"redo"</item>
<!--        <item>"circleimg"</item>-->
<!--        <item>"square"</item>-->
<!--        <item>"oval"</item>-->
<!--        <item>"gallery"</item>-->
        <item>"save"</item>
    </array>
    <string name="file_name">"File name"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_sketch">Sketch</string>
</resources>