<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/bg_popup"
  android:orientation="vertical"
  android:paddingBottom="@dimen/_16sdp"
  android:paddingLeft="@dimen/_16sdp"
  android:paddingRight="@dimen/_16sdp"
  android:paddingTop="@dimen/_16sdp">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/stroke"
     />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
      android:id="@+id/stroke_circle"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:contentDescription="@string/stroke_size"
      android:src="@drawable/circle" />

    <SeekBar
      android:id="@+id/stroke_seekbar"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
  </LinearLayout>

  <com.larswerkman.holocolorpicker.ColorPicker
    android:id="@+id/stroke_color_picker"
    android:layout_width="180dp"
    android:layout_height="0dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="5dp"
    android:layout_weight="0.06" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/saturation"
     />

  <com.larswerkman.holocolorpicker.SVBar
    android:id="@+id/svbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/opacity"
     />

  <com.larswerkman.holocolorpicker.OpacityBar
    android:id="@+id/opacitybar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

</LinearLayout>
